--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=mail,password,person,send,vpn_key"/>
+
 </head>
 <body>
     <main>
@@ -15,9 +18,23 @@
            <div id="form">
                 <h1>Login</h1>
                 <p>Seja Bem-vindo</p>
-                <form action="login.php" method="post">
-                  <label for="iemail">Email:</label>  <input type="email" name="email" id="iemail" placeholder="digite seu email">
-                  <label for="isenha">Senha:<input type="password" name="senha" id="isenha" placeholder="digite sua senha"></label>
+
+                <form action="login.php" method="post" autocomplete="on">
+
+                <div class="campo">
+                    <span class="material-symbols-outlined">person</span>
+                    <input type="email" name="email" id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
+                    <label for="ilogin">Login</label>
+                </div>
+
+                <div class="campo">
+                    <span class="material-symbols-outlined">vpn_key</span>
+                    <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8">
+                    <label for="isenha">Senha</label>
+                </div>
+
+                <input type="submit" value="Entrar">
+                <a href="esqueci.html" class="botao">Esqueci a senha<span class="material-symbols-outlined">mail</span></a>
                 </form>
            </div>
         </section>
